[package]
authors = ["Rick Russell <rick@rickrussell.org>", "Masaki Nakano <admin@namachan10777.dev>"]
description = "A PJLink library that can be used to commmicate over the network with PJLink enabled devices such as a projector or display"
edition = "2021"
license = "Apache-2.0"
name = "pjlink"
repository = "https://github.com/namachan10777/pjlink"
version = "0.2.0"

[features]
async-std-runtime = ["async-std"]
default = ["tokio-runtime"]
tokio-runtime = ["tokio/net", "tokio/io-util", "tokio/time"]

[dependencies]
async-std = {version = "1", optional = true}
md5 = "0.3.7"
tokio = {version = "1", optional = true}

[dev-dependencies]
clap = {version = "4.0.29", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
